first commit of the estimation

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -11,11 +11,11 @@
     </mat-toolbar>
     <mat-nav-list style="margin-top: 50px;">
    <div class="sidemenu_option">
-     <p (click)="reportPage()">Repair<i class="fa fa-angle-right" style="margin-left: 30px;"></i></p>
+     <p (click)="reportPage()">Repair<i class="fa fa-angle-right" style="margin-left: 30px;margin-top: 20px;"></i></p>
    </div>
     
    <div class="sidemenu_option">
-    <p (click)="orderPage()">Orders<i class="fa fa-angle-right" style="margin-left: 30px;"></i></p>
+    <p (click)="orderPage()">Orders<i class="fa fa-angle-right" style="margin-left: 30px;margin-top: 20px;"></i></p>
   </div>
     </mat-nav-list>
   </mat-sidenav>
