--- a/src/app/repair/repair.component.html
+++ b/src/app/repair/repair.component.html
@@ -78,7 +78,7 @@
         
   </div>
   </div>
-  <button (click)="exporter.exportTable('csv')" id="add"  style="background: #1B81EB" mat-fab mat-accent class="fixedbutton"><span>
+  <button (click)="goToRepairEstimation()" id="add"  style="background: #1B81EB" mat-fab mat-accent class="fixedbutton"><span>
         <li  class="fa fa-plus" style="margin-right: 5px;cursor: pointer;color: white"></li>
       </span>
       
