--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,1 +1,85 @@
-<p>orders works!</p>
+<div class="container-fluid" style="margin-top: 20px;">
+  
+    <div class="row">
+      <div class="col-md-10">
+         
+      
+  
+      </div>
+      <div class="col-md-2 text-right">
+          <mat-form-field>
+              <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+            </mat-form-field>
+        </div>
+    </div>
+
+
+  
+
+
+
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+          <mat-spinner *ngIf="boolSpinner" style="margin:0 auto;" 
+          mode="indeterminate"  [diameter]="50"></mat-spinner>
+  
+      </div>
+  </div>
+
+      <div class="row">
+      <div class="mat-elevation-z8 table-responsive" >
+            <table  mat-table [dataSource]="dataSource" matSort  matTableExporter #exporter="matTableExporter">
+        
+            <!-- Position Column -->
+            <ng-container matColumnDef="s.no">
+              <th mat-header-cell *matHeaderCellDef  mat-sort-header> S.no </th>
+              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            </ng-container>
+        
+            <!-- Name Column -->
+            <ng-container matColumnDef="date">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Date</th>
+              <td mat-cell *matCellDef="let element"> {{element.ordertype}} </td>
+            </ng-container>
+
+
+
+            <ng-container matColumnDef="order_id">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Order_Id</th>
+              <td mat-cell *matCellDef="let element"> {{element.material}} </td>
+            </ng-container>
+        
+            <!-- Weight Column -->
+            <ng-container matColumnDef="assign">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Assigned to </th>
+              <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+            </ng-container>
+        
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="status">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+              <td mat-cell *matCellDef="let element">{{element.ounce_amount}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="due">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Due date </th>
+                    <td mat-cell *matCellDef="let element">{{element.seller_amount}} </td>
+                  </ng-container>
+
+               
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        
+          <mat-paginator [pageSizeOptions]="[100, 300, 500]" showFirstLastButtons></mat-paginator>
+        </div>
+        
+  </div>
+  </div>
+  <button (click)="goToOrderEstimation()" id="add"  style="background: #1B81EB" mat-fab mat-accent class="fixedbutton"><span>
+        <li  class="fa fa-plus" style="margin-right: 5px;cursor: pointer;color: white"></li>
+      </span>
+      
+      </button>
