--- a/src/app/all-work/all-work.component.html
+++ b/src/app/all-work/all-work.component.html
@@ -34,7 +34,7 @@
     </tr>
     <!-----Making charge display section ends here  -->
 
-
+   
    
     <!---Stone making charge Input Section ends here--> 
 
@@ -199,7 +199,6 @@
              
              <th>S no.</th>
              <th>Due date</th>
-             <th>Image</th>
              <th>Assigned To</th>
              <th>Description</th>
              <th>Weight</th>
@@ -221,15 +220,6 @@
              <td *ngIf="item.due!=null">{{ item.due.slice(0,item.due.indexOf('T')) }}</td>
              <td *ngIf="item.assignedTo!=null" (click)="openSelectOrAddContacts(item,contactsTemplate)" style="cursor:pointer;">{{item.assignedTo.name}}</td>
              <td *ngIf="item.assignedTo==null" (click)="openSelectOrAddContacts(item,contactsTemplate)"><button mat-button-raised>+</button></td>
-             <!--Related to image set-->
-             <td *ngIf="item.isImageSet()"><img [src]="item.image"></td>  
-             <td *ngIf="!item.isImageSet()">    
-                  <span style="color:red;" *ngIf="item.imageUploader.message">{{item.imageUploader.message}}</span>
-                <input #file type="file" accept='image/*' (change)="item.imageUploader.preview(file.files);uploadItemImage(item);" />
-                <img [src]="item.imageUploader.imgURL" height="200" *ngIf="item.imageUploader.imgURL">
-                {{item.imageUploader.imgURL}}
-              </td>
-             <!--End of item related image--> 
              <td>{{item.name}}</td>
              <td>{{item.weight}}</td>
              <td>{{item.wastage}}</td>
@@ -297,28 +287,50 @@
 
       <div class="row">
       <div class="mat-elevation-z8 table-responsive" > 
-        <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-          <mat-spinner></mat-spinner>
-      </div>
             <table  mat-table [dataSource]="dataSource" matSort  matTableExporter #exporter="matTableExporter" style="width:100%">
-        
+            
+              <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+                <td mat-cell *matCellDef="let element" >
+                  <!--List of statuses to be shown
+                     0 pending - info
+                     1 processing - pending
+                     2 assigned - how_to_reg
+                     3 ready - thumb_up
+                     4 completed - check_circle_outline
+                  -->
+                  <p *ngIf="element.status==0"><mat-icon style="color:red">info</mat-icon>Pending</p>
+                  <p *ngIf="element.status==1"><mat-icon style="color:#1B81EB">history</mat-icon>Processing</p>
+                  <p *ngIf="element.status==2"><mat-icon style="color:blue">how_to_reg</mat-icon>Assigned</p>
+                  <p *ngIf="element.status==3"><mat-icon>thumb_up</mat-icon>Ready</p>
+                  <p *ngIf="element.status==4"><mat-icon style="color:green">check_circle_outline</mat-icon>Completed</p>
+                </td>
+              </ng-container>
+
+             
             <!-- Position Column -->
             <ng-container matColumnDef="order_id">
               <th mat-header-cell *matHeaderCellDef  mat-sort-header> Order ID</th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.id}} </td>
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.order.id}} </td>
             </ng-container>
         
-            <!-- Name Column -->
+            <!-- Date Column -->
             <ng-container matColumnDef="date">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Date</th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)" > {{element.getDate()}}
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)" > {{element.getDueDate()}}
             </ng-container>
 
+          <!-- Name Column -->
+            <ng-container matColumnDef="item">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Item</th>
+             
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)" > {{element.name}}
+            </ng-container>
 
 
             <ng-container matColumnDef="customer">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.customer}}  </td>
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.order.customer}}  </td>
             </ng-container>
         
             <!-- Weight Column -->
@@ -326,8 +338,6 @@
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Total cost </th>
               <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{money(element.total)}} </td>
             </ng-container>
-
-   
 
             
 
@@ -337,11 +347,10 @@
              
             <td mat-cell *matCellDef="let element">
               <ng-container *ngIf="element.assignedTo==null">
-                  <button mat-stroked-button color="primary">+</button>
+                  <button mat-stroked-button color="primary" (click)="openSelectOrAddContacts(element,contactsTemplate)">+</button>
               </ng-container>
               <ng-container *ngIf="element.assignedTo!=null">
-                no data i guess
-                {{element.assignedTo}}
+                {{element.assignedTo.name}}
               </ng-container>
               
             </td>
@@ -360,7 +369,7 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
           </table>
         
-          <mat-paginator [pageSizeOptions]="[3]" showFirstLastButtons></mat-paginator>
+          <mat-paginator [pageSizeOptions]="[100, 300, 500]" showFirstLastButtons></mat-paginator>
         </div>
         
   </div>
