--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -300,7 +300,8 @@
         <div class="spinner-container" *ngIf="dataSource.loading$ | async">
           <mat-spinner></mat-spinner>
       </div>
-            <table  mat-table [dataSource]="dataSource" matSort  matTableExporter #exporter="matTableExporter" style="width:100%">
+            <table  mat-table [dataSource]="dataSource" matSort matSortActive="order_id" matSortDirection="asc" matSortDisableClear
+              matTableExporter #exporter="matTableExporter" style="width:100%">
         
             <!-- Position Column -->
             <ng-container matColumnDef="order_id">
