changes on order details

--- a/src/app/all-work/all-work.component.html
+++ b/src/app/all-work/all-work.component.html
@@ -23,7 +23,7 @@
     </tr>
 
     <!----- Making charge display section starts here -->
-    <tr  style="width:10px;" *ngFor="let i of selectedItem.makingChargeItems;let sno=index;">
+    <!-- <tr  style="width:10px;" *ngFor="let i of selectedItem.makingChargeItems;let sno=index;">
 
     <td>{{sno+1}}</td>
     <td>{{i.name}}</td>
@@ -31,7 +31,7 @@
     <td>{{money(i.cost)}}</td>
     <td>{{money(i.total)}}</td>
 
-    </tr>
+    </tr> -->
     <!-----Making charge display section ends here  -->
 
    
@@ -64,7 +64,7 @@
     </tr>
 
     <!----- Making charge display section starts here -->
-    <tr  style="width:10px;" *ngFor="let i of selectedItem.stones;let sno=index;">
+    <!-- <tr  style="width:10px;" *ngFor="let i of selectedItem.stones;let sno=index;">
 
     <td>{{sno+1}}</td>
     <td>{{i.name}}</td>
@@ -72,7 +72,7 @@
     <td>{{money(i.cost)}}</td>
     <td>{{money(i.total)}}</td>
 
-    </tr>
+    </tr> -->
     <!-----Making charge display section ends here  -->
 
    
