--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,7 +1,7 @@
 
 <!--------Start of stone chage model-->
  <!------START OF MAKING CHARGE MODAL------>
-<ng-template #template2  id="side-modal" style="padding:10px;">
+<ng-template #template2  id="side-modal" style="padding:10px;margin-top:20px">
 <div class="side-modal">
   <div class="modal-header ">
   <h3 class="modal-title ">Addon Charges</h3>
@@ -13,7 +13,7 @@
   </div>
   <div class="modal-body">
   <h5>Making Charges</h5>
-    <table style="width:100%" border="2"> 
+    <table style="width:100%" border="2" class="table-responsive"> 
     <tr>
     <th width=20px>S.no</th>
     <th>Name</th>
@@ -40,9 +40,8 @@
 
 
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <!-- <td colspan="3"></td> -->
+          
             <td>Sub Total:</td>
             <td >{{money(selectedItem.makingCharge)}}</td>
         
@@ -53,7 +52,7 @@
       <br>
       <h5>Stone Charges</h5>
 
-     <table style="width:100%" border="2">
+     <table style="width:100%" border="2" class="table-responsive">
     <tr>
     <th width=20px>S.no</th>
     <th>Name</th>
@@ -107,7 +106,7 @@
       
     </div>
     <div class="modal-body">
-      <table style="width:100%;">
+      <table style="width:100%;" class="table-responsive">
           <tr>
             <td>      
               <mat-form-field>
@@ -182,7 +181,7 @@
       
     </div>
   <div class="modal-body">
-    <table style="width:100%">
+    <table style="width:100%" class="table-responsive">
         <tr><td>Name:</td><th>{{selected.customer}}</th>
         <td>Address:</td><th>{{selected.address}}</th>
         </tr>
@@ -194,13 +193,13 @@
 
 
     <hr>
-    <table style="width:100%" border="1">
+    <table style="width:100%" border="1" class="table-responsive">
        <tr >
              
              <th>S no.</th>
              <th>Due date</th>
-             <th>Image</th>
              <th>Assigned To</th>
+             <th>Image</th>
              <th>Description</th>
              <th>Weight</th>
              <th>Wastage %</th>
@@ -222,11 +221,13 @@
              <td *ngIf="item.assignedTo!=null" (click)="openSelectOrAddContacts(item,contactsTemplate)" style="cursor:pointer;">{{item.assignedTo.name}}</td>
              <td *ngIf="item.assignedTo==null" (click)="openSelectOrAddContacts(item,contactsTemplate)"><button mat-button-raised>+</button></td>
              <!--Related to image set-->
-             <td *ngIf="item.isImageSet()"><img [src]="item.image"></td>  
+             <td *ngIf="item.isImageSet()"><img [src]="getselectedIamge(item)" height="100" width="100%"></td>  
              <td *ngIf="!item.isImageSet()">    
                   <span style="color:red;" *ngIf="item.imageUploader.message">{{item.imageUploader.message}}</span>
                 <input #file type="file" accept='image/*' (change)="item.imageUploader.preview(file.files);uploadItemImage(item);" />
-                <img [src]="item.imageUploader.imgURL" height="200" *ngIf="item.imageUploader.imgURL">
+                <!-- <input  type="file" accept='image/*' (change)="uploadItemImage($event,selected.id)" /> -->
+                <img [src]="currentImage" height="100" width="100" *ngIf="currentImage">
+                <!-- <img *ngIf="selectedimage" [src]="selectedimage" height="100" class="img-thumbnail"> -->
                 {{item.imageUploader.imgURL}}
               </td>
              <!--End of item related image--> 
@@ -271,14 +272,14 @@
       
   
       </div>
-     <!--
+     
       
-     <div class="col-md-2 text-right">
+     <!-- <div class="col-md-2 text-right">
           <mat-form-field>
               <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
             </mat-form-field>
-        </div>
-         -->
+        </div> -->
+        
     </div>
 
 
@@ -289,19 +290,19 @@
 
     <div class="row">
       <div class="col-md-12 text-center">
-          <mat-spinner *ngIf="boolSpinner" style="margin:0 auto;" 
-          mode="indeterminate"  [diameter]="50"></mat-spinner>
+          <mat-spinner *ngIf="boolSpinner"  
+          mode="indeterminate"  [diameter]="20"></mat-spinner>
   
       </div>
   </div>
 
       <div class="row">
       <div class="mat-elevation-z8 table-responsive" > 
-        <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-          <mat-spinner></mat-spinner>
+        <div class="spinner-container"   *ngIf="dataSource.loading$ | async">
+          <mat-spinner class="text-center"></mat-spinner>
       </div>
-            <table  mat-table [dataSource]="dataSource" matSort matSortActive="order_id" matSortDirection="asc" matSortDisableClear
-              matTableExporter #exporter="matTableExporter" style="width:100%">
+            <table class="table"  mat-table [dataSource]="dataSource" matSort matSortActive="order_id" matSortDirection="asc" matSortDisableClear
+              matTableExporter #exporter="matTableExporter"  style="width:100%">
         
             <!-- Position Column -->
             <ng-container matColumnDef="order_id">
@@ -338,7 +339,7 @@
              
             <td mat-cell *matCellDef="let element">
               <ng-container *ngIf="element.assignedTo==null">
-                  <button mat-stroked-button color="primary">+</button>
+                  <button mat-stroked-button text-center color="primary">+</button>
               </ng-container>
               <ng-container *ngIf="element.assignedTo!=null">
                 no data i guess
@@ -361,7 +362,7 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
           </table>
         
-          <mat-paginator [pageSizeOptions]="[3]" showFirstLastButtons></mat-paginator>
+          <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons></mat-paginator>
         </div>
         
   </div>
