--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -221,7 +221,7 @@
              <td *ngIf="item.assignedTo!=null" (click)="openSelectOrAddContacts(item,contactsTemplate)" style="cursor:pointer;">{{item.assignedTo.name}}</td>
              <td *ngIf="item.assignedTo==null" (click)="openSelectOrAddContacts(item,contactsTemplate)"><button mat-button-raised>+</button></td>
              <!--Related to image set-->
-             <td *ngIf="item.isImageSet()"><img [src]="getselectedIamge(item)" height="100" width="100%"></td>  
+             <td *ngIf="item.isImageSet()"><img [src]="getselectedIamge(item)" height="150" width="150"></td>  
              <td *ngIf="!item.isImageSet()">    
                   <span style="color:red;" *ngIf="item.imageUploader.message">{{item.imageUploader.message}}</span>
                 <input #file type="file" accept='image/*' (change)="item.imageUploader.preview(file.files);uploadItemImage(item);" />
