--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -221,12 +221,12 @@
              <td *ngIf="item.assignedTo!=null" (click)="openSelectOrAddContacts(item,contactsTemplate)" style="cursor:pointer;">{{item.assignedTo.name}}</td>
              <td *ngIf="item.assignedTo==null" (click)="openSelectOrAddContacts(item,contactsTemplate)"><button mat-button-raised>+</button></td>
              <!--Related to image set-->
-             <td *ngIf="item.isImageSet()"><img [src]="getselectedIamge(item)" height="150" width="150"></td>  
+             <td *ngIf="item.isImageSet()"><img [src]="getselectedIamge(item)" height="50%" width="100%"></td>  
              <td *ngIf="!item.isImageSet()">    
                   <span style="color:red;" *ngIf="item.imageUploader.message">{{item.imageUploader.message}}</span>
                 <input #file type="file" accept='image/*' (change)="item.imageUploader.preview(file.files);uploadItemImage(item);" />
                 <!-- <input  type="file" accept='image/*' (change)="uploadItemImage($event,selected.id)" /> -->
-                <img [src]="currentImage" height="100" width="100" *ngIf="currentImage">
+                <img [src]="currentImage" height="60%" width="100%" *ngIf="currentImage">
                 <!-- <img *ngIf="selectedimage" [src]="selectedimage" height="100" class="img-thumbnail"> -->
                 {{item.imageUploader.imgURL}}
               </td>
