--- a/src/app/all-work/all-work.component.html
+++ b/src/app/all-work/all-work.component.html
@@ -369,7 +369,7 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
           </table>
         
-          <mat-paginator [pageSizeOptions]="[100, 300, 500]" showFirstLastButtons></mat-paginator>
+          <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons></mat-paginator>
         </div>
         
   </div>
