--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -318,13 +318,13 @@
 
 
 
-            <ng-container matColumnDef="customer">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.customer}}  </td>
+            <ng-container matColumnDef="phone_no">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>phone_no</th>
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.phone}}  </td>
             </ng-container>
         
             <!-- Weight Column -->
-            <ng-container matColumnDef="cost">
+            <ng-container matColumnDef="Status">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Total cost </th>
               <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{money(element.total)}} </td>
             </ng-container>
@@ -343,7 +343,7 @@
               </ng-container>
               <ng-container *ngIf="element.assignedTo!=null">
                 no data i guess
-                {{element.assignedTo}}
+                {{element.assignedTo.name}}
               </ng-container>
               
             </td>
